add more options

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Angular Lungo Phonegap Starter Kit</title>
+  <title>Lungo Angular Phonegap Starter Kit</title>
   <meta name="description" content="">
 
   <meta name="HandheldFriendly" content="True">
